# kalshi-bot

./: .gitignore  README.md  bot.py  claude.txt  claude_demo.txt  config.py  pyproject.toml  requirements.txt
data/: aliases.json  trading.db
integration/: __init__.py  edge.py  kalshi_client.py  market_finder.py  match_tracker.py  player_resolver.py  risk.py  tennis_feed.py
plots/: backtest_metrics.csv
scripts/: audit_model.py  backtest.py  build_features.py  download_data.py  train.py  tune_updater.py
src/edu/wisc/cs/sdn/vnet/: Device.java  DumpFile.java  Iface.java  Main.java
src/edu/wisc/cs/sdn/vnet/rt/: ArpCache.java  ArpEntry.java  RouteEntry.java  RouteTable.java  Router.java
src/edu/wisc/cs/sdn/vnet/sw/: Switch.java
tennis/: __init__.py  calibration.py  elo.py  engine.py  features.py  markov.py  model.py  types.py  updater.py
tests/: test_engine.py  test_markov.py  test_updater.py
tests/test_integration/: test_edge.py  test_market_finder.py  test_player_resolver.py  test_risk.py  test_tennis_feed.py
web/: app.py  db.py  guard.py  state.py
web/static/: app.js  index.html  style.css
