[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tennis-engine"
version = "0.1.0"
description = "Real-time tennis win probability engine"
requires-python = ">=3.10"
dependencies = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "matplotlib>=3.8",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tennis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
